# limitless-convex-db

./: .gitignore  README.md  openapi.yml  pyproject.toml  sync-docs.md  test.py
convex-app/: .env.example  .prettierrc  README.md  package.json
convex-app/convex/: dateUtils.ts  http.ts  lifelogs.js  lifelogs.ts  markdownEmbeddings.ts  metadata.js  metadata.ts  operations.ts  schema.ts  sync.ts  test.js  types.ts  updates.ts
convex-app/convex/actions/: dashboard.ts  sync.ts
convex-app/convex/api/: actions.ts  queries.ts
convex-app/convex/dashboard/: previews.ts  sync.ts
convex-app/convex/extras/: hooks.ts  patches.ts  schedules.ts  slackBlockHelpers.ts  tests.ts  utils.ts
convex-app/convex/queries/: dashboard.ts
convex-app/convex/sampleData/: seeds.ts
convex-app/python-src/: .env.example  README.md  fetch_latest_lifelog.py  main.py  notebook.ipynb  requirements.txt  scheduler.py  sync.py  utils.py
examples/: _client.py  export_markdown.py
lifelog/: __init__.py
lifelog/core/: api_client.py  data_manager.py  schemas.py
notebooks/: chart_usage.ipynb  recording_sessions.csv
python/: _client.py  requirements.txt  summarize_day.py
