[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
readme = "README.md"
requires-python = ">=3.8,<4.0"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "openai==1.65.5",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "requests==2.32.3",
    "tzlocal==5.0.1",
]

[project.optional-dependencies]

all = [
    "ruff",
    "ipykernel",
    "pandas",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I"]
quote-style = "double"
